[package]
name = "fuzzdex"
version = "0.4.0"
authors = ["Tomasz bla Fortuna <bla@thera.be>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/blaa/fuzzdex"
keywords = ["fuzzy", "dictionary", "geocoding"]

[lib]
name = "fuzzdex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
levenshtein-diff = "0.2.1"
lru = "0.7"
serde = { version = "1", features = ["derive"] }
regex = "1"
lazy_static = "1"
unicode-segmentation = "1"
unicode-normalization= "0.1.19"
unicode_categories = "0.1"

# Requires AESNI extensions
# As hashmaps/hashsets are used extensively it speeds up some testcases
# by over 10%.
ahash = "0.7.6"

