[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "fuzzdex"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
]
